# smeazy-invoices

./: .gitignore  README.md
backend/: .env  .env.example  .env.local  .gitignore  Dockerfile  alembic.ini  compose.yml  dev-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2846e330f264_init_schema.py  3647ccd6b77e_init_schema.py  5720ed99bb19_change_line_items.py  6a0dbff2c69e_init_schema.py  d5e40cc18d64_init_schema.py
backend/app/: atalking.py  config.py  crud.py  database.py  db_utils.py  deps.py  main.py  models.py  schemas.py  security.py  utils.py
backend/app/routers/: examples.json  invoices.py  users.py
backend/docs/: reset.md
frontend/: .env.development  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  store.ts
frontend/src/components/: Alerts.tsx  Buttons.tsx  FormComponents.tsx
frontend/src/features/auth/: api.ts  store.ts  types.ts
frontend/src/features/auth/components/: AuthForms.tsx  AuthPage.tsx  AuthSelector.tsx  context.ts  providers.tsx
frontend/src/features/auth/hooks/: useAPIs.ts
frontend/src/features/invoices/: api.ts  store.ts  types.ts  utils.ts
frontend/src/features/invoices/components/: Home.tsx  InvoiceDisplay.tsx  InvoiceForm.tsx  InvoicePDF.tsx  InvoiceStats.tsx  InvoicesPage.tsx  PopUp.tsx
frontend/src/features/invoices/hooks/: formHooks.ts  useAPIs.ts  useData.ts
frontend/src/features/invoices/ui/: components.tsx  pdfStyles.tsx  themes.ts
frontend/src/features/invoices/utils/: formatValues.ts  guestStorage.ts  handleDownload.tsx
frontend/src/hooks/: useAPIs.ts  useAlerts.ts  useData.ts  useLogout.ts
vite-project/: package-lock.json  package.json
vite-project/src/: App.tsx  index.css
vite-project/src/components/: Navbar.tsx
vite-project/src/components/Dashboard/: CreateInvoice.tsx  Dashboard.tsx  RevenueChart.tsx  StatsCard.tsx  TransactionsTable.tsx
vite-project/src/components/Home/: Cards.tsx  DashboardPreview.tsx  Features.tsx  FeaturesSection.tsx  Footer.tsx  Hero.tsx  HeroSection.tsx  Home.tsx  Navigation.tsx
vite-project/src/components/Registration/: Api.ts  Registration.tsx  formSchemas.tsx
vite-project/src/components/UI/: Button.tsx
vite-project/src/services/: api.ts
